-Fixed rare bug where former Polish subjects would get their rulers and heirs replaced when the Fragmentation of Poland happens
-Fixed longstanding bug where England could not call their subject Normandy into any wars after the Norman conquest
-Buffed the Golden Horde and the Ilkhanate upon spawning through their respective events
-Many <3 development provinces in Europe now have their development boosted to 3 in the timeline once they are civilised
-Norway replaces Sweden as a suggested country in the 1054 bookmark (it fit better due to its potential role in the English conquest event chain)
-Small rework to part of Aragon's mission tree structure
-Province warscore cost replaces claim duration in Aragon's age ability
-Sicily age ability nerfed
-Changed the province requirements in the decision to create Brandenburg as a non-Markish country
-Slightly rebalanced the Frankish Monarchy interaction effects
-Forming another nation should now always switch your country name to theirs (this was a problem with dynamic names such as Altsachsen)
-Hospices are now more effective at stopping plagues from spawning and spreading in provinces
-Remastered the mission window GFX (thanks to SaGa)
-Event 'A New Home for the Knights' now cedes all of the island of Rhodes properly
-Rebalanced/fixed many NI/mission modifiers, made generic age ability modifiers consistent with those from ideas
-Fixed many city/unit positions on the map
-Other minor localization/bug fixes

# v 2.2.1 #

-Added the following new mercenary companies: Armagnacs, Latvian Mercenaries, Estonian Warriors
-Added 2 new estate privileges: 1 clergy privilege for Pagans, 1 nobility privilege for Georgia
-Small fixes for the following mission trees: Austria, Sweden, France, Aquitaine, Papal States, Altsachsen, Brandenburg
-Overhauled the following custom event sets: Bogomilist
-Added the following alternative country names: Meshchera (Qasim)