@@ -279,7 +279,7 @@ episcopal_competences_reform = {
 }
 
 unity_of_the_brethen_reform = {
-	icon = "revolutionary_council"
+	icon = "revolutionary_council_reform"
 	allow_normal_conversion = yes
 	potential = {
 		religion = hussite
@@ -288,8 +288,8 @@ unity_of_the_brethen_reform = {
 		religion = hussite
 	}
 	modifiers = {
-		global_missionary_strength = 0.02
-		diplomatic_reputation = 2
+		diplomatic_reputation = 1
+		global_unrest = -1
 	}
 	ai = {
 		factor = 1.5
