@@ -478,6 +478,7 @@ theocracy = {
 				ora_et_labora_reform
 				monastic_conservatism_reform
 				acquisition_of_granges_reform
+				unity_of_the_brethen_reform
 				kingdom_of_god_reform
 			}
 		}
@@ -490,7 +491,6 @@ theocracy = {
 				loyal_nobility_reform
 				pious_merchants_reform
 				monastic_breweries_reform
-				unity_of_the_brethen_reform
 				wisdom_of_the_dervishes_reform
 			}
 		}
