@@ -428,6 +428,30 @@ on_war_won = {
 			SWI = { set_country_flag = hired_to_pope }
 		}
 	}
+
+	if = {
+		limit = {
+			FROM = {
+				ai = yes
+				is_subject_of = ROOT
+				NOT = { is_subject_of_type = tributary_state }
+			}
+			ROOT = {
+				ai = yes
+				has_country_modifier = invasion_nation_m
+				OR = {
+					tag = GLH
+					tag = ILK
+					tag = JMN
+				}
+				OR = {
+					has_reform = steppe_horde
+					has_reform = great_mongol_state_reform
+				}
+			}
+		}
+		ROOT = { inherit = FROM }
+	}
 }
 
 # country
