@@ -1720,6 +1720,16 @@ country_event = {
 	}
 	mean_time_to_happen = { days = 1 }
 
+	immediate = {
+		hidden_effect = {
+			check_if_non_state_advisor_effect = {
+				chance_of_primary = 75
+				chance_of_tertiary = 20
+				chance_of_secondary = 5
+			}
+		}
+	}
+
 	option = {
 		name = "FBIA22"
 		ai_chance = {
@@ -1729,9 +1739,10 @@ country_event = {
 				NOT = { legitimacy = 80 }
 			}
 		}
-		define_advisor = {
-			type = statesman
-			skill = 2
+		generate_advisor_of_type_and_semi_random_religion_effect = {
+			advisor_type = statesman
+			advisor_type_if_not_state = statesman
+			scaled_skill = yes
 			discount = yes
 		}
 		add_faction_influence = {
@@ -1747,6 +1758,10 @@ country_event = {
 		}
 		add_prestige = 5
 		add_treasury = -50
+	}
+
+	after = {
+		erase_advisor_flags_effect = yes
 	}
 }
 
@@ -3831,10 +3846,9 @@ country_event = {
 	option = {
 		name = "FBIA75"
 		add_prestige = 5
-		define_advisor = {
+		generate_scaled_advisor_of_type_and_religion_effect = {
 			type = artist
 			discount = yes
-			skill = 2
 		}
 	}
 }
