@@ -309,6 +309,7 @@ country_event = {
 		name = "religious_leagues.5.a"
 		enable_hre_leagues = yes
 		set_global_flag = evangelical_union_happened
+		set_global_flag = remove_electorate_allowed
 	}
 }
 
