@@ -1769,11 +1769,11 @@
  HREMA77: "Use his knowledge to enrich our commanders"
  HREMB77: "Use his expertise to inspire our troops"
  HREMT78: "Arrival of the Golden Horde"
- HREMD78: "With the unification of the Mongol clans by Genghis Khan, the rapid expansion of the Empire to Central Asia began, where the Tatars were subjugated with relatively little effort. Hungry for blood and treasures, the Mongols are now leading their deadly horsemen further west, where rumors of these merciless steppe warriors alone cause fear and terror. Even the largest and most powerful Empires of Europe will have to watch out for the clenched and superior power of the Mongols."
+ HREMD78: "Under the watchful command of Temüjin - more commonly known as the warmonger Genghis Khan - a divided Mongolia was united into a string of allied tribes. Notorious for having rapidly conquered swathes of territories in China and Central Asia in unison, they have already subdued the Tatars with relative ease. Greedy for more blood and treasure as always, the Mongols have began to venture further west, bringing any opposition down to grovel at the feet of their deadly horsemen.\nRumors of the merciless steppe warriors slaughtering entire cities in mere days has ignited flames of despair within the hearts of the populace; even the largest and most powerful armies of the empires of Europe stand no change against the superior armies of the Mongols."
  HREMA78: "It's the End of Days!"
  hrema78.tt: "§ROur allies might betray us in this war.§!"
  HREMT79: "Arrival of the Ilkhanate"
- HREMD79: "After the execution of Mongol merchants by Muhammad II of Khwarazm, entire Persia was subjugated by the Mongol hordes in less than two years, looting and occupying the largest cities of the Empire, leaving it completely devastated. After the subsequent crushing of last rebellions and consolidation of rule, the Mongols are now turning their gaze to further west. The chroniclers of our time prophesize that the Mongol invaders will significantly change the political landscape of Mesopotamia and beyond."
+ HREMD79: "Following the ruthless execution of Mongol envoys and merchants by decree of Ala ad-Din Muhammad II of Khwarazm, Persia was wholly subjugated by the Mongol hordes within two years. With unmatched speed, the infamously brutal horsemen looted, razed, and downright leveled many Persian centers to the ground, leaving Persia a desolate wasteland in the aftermath.\nAfter subsequently destroying the seeds of rebellion planted throughout Persia and consolidating their rule, the Mongols have shifted their gaze further west, with their next target being Mesopotamia. A potential Mongol invasion, warn chroniclers and the superstitious alike, may reshape the political landscape of Mesopotamia for centuries to come."
  HREMA79: "It's the End of Days!"
  HREMT80: "Fate of the Italian Greeks"
  HREMD80: "The ancient Greeks founded colonies all over the coast of the Mediterranean and Black Sea in the 8th and 7th centuries BC in order to cope with the rapid population growth in their homeland. Many of these colonies have perished centuries ago, but southern Italy is still inhabited by a considerable number of Greeks, living in the Byzantine provinces of Magna Graecia.\n\nWith the conquest of the last Byzantine fortress in Italy, the peninsula now belongs entirely to the Italians, raising the question of how we will deal with the Greek people now living under our authority. Although the Greeks are considered the advocates of the ancient civilization, we could initiate a de-Hellenization and absorb their cultural identity into ours."
@@ -1807,10 +1807,6 @@
  HREMD87: "The Seljuk [SJK.Monarch.GetTitle] [SJK.Monarch.GetName] has demanded that the Khwarezm region be ceded to their growing empire or face invasion. In return, they promise autonomy and a fair governor of local stock who will re-orient our Khanate around a more proper settled government system. Just as Khwarezm was once a tributary realm to the great Sassanid Persian state under its own local dynasty, should we again heed their demands and accept their proposed new leadership?"
  HREMA87: "Very well"
  HREMB87: "We bow to no one"
- HREMT88: "Peaceful Mongols"
- HREMD88: "For several weeks now, we have neither waged war against weak nations nor plundered a single city. Our warriors and chiefs are tired of spending idle time in their tents, wondering when they will be allowed to mount their horses and raise their weapons again. They thirst for the blood of our enemies and demand the immediate proclamation of another war against one of our neighbors."
- HREMA88: "To war!"
- HREMB88: "We still need some rest"
  HREMT89: "Free City of Riga"
  HREMD89: "For generations, German traders and missionaries have visited the mouth of the Daugava river to carry out their business. Recently, their population has grown to such an extent that they have established a new fortified city on the site of the ancient village of Riga. In order to assist us in pushing German Catholic influence in the area, the Pope has proclaimed that the city will be immediately recognized as a Free City enjoying the full protection of Western European powers."
  HREMA89: "A pleasant development..."
