@@ -1769,11 +1769,11 @@
  HREMA77: "Nutzt sein Wissen, um unsere Kommandeure zu bereichern"
  HREMB77: "Nutzt seine Expertise, um unsere Truppen zu inspirieren"
  HREMT78: "Ankunft der Goldenen Horde"
- HREMD78: "Mit der Vereinigung der mongolischen Clans durch Dschingis Khan begann die rasche Expansion des Reiches nach Zentralasien, wo die Tataren mit relativ geringem Aufwand unterworfen wurden. Hungrig nach Blut und Schätzen führen die Mongolen nun ihre todbringenden Reiter weiter nach Westen, wo allein Gerüchte über diese erbarmungslosen Steppenkrieger Angst und Schrecken auslösen. Selbst die größten und mächtigsten Imperien Europas werden sich vor der geballten und überlegenen Macht der Mongolen in Acht nehmen müssen."
+ HREMD78: "Unter dem wachsamen Kommando von Temüjin - besser bekannt als der Kriegsherr Dschingis Khan - wurde eine geteilte Mongolei zu einer Reihe von verbündeten Stämmen vereint. Berüchtigt dafür, in kürzester Zeit ganze Landstriche in China und Zentralasien erobert zu haben, unterwarfen sie inzwischen auch die Tataren mit relativer Leichtigkeit. Gierig nach noch mehr Blut und Schätzen haben die Mongolen begonnen, weiter nach Westen vorzudringen, um jeden Widerstand vor den Füßen ihrer todbringenden Reiter auszulöschen.\nGerüchte über die gnadenlosen Steppenkrieger, die in nur wenigen Tagen ganze Städte abschlachten, haben in den Herzen der Bevölkerung Flammen der Verzweiflung entfacht; selbst die größten und mächtigsten Armeen der europäischen Imperien haben keine Aussicht auf Erfolg gegen die überlegenen Armeen der Mongolen."
  HREMA78: "Es ist das Ende aller Tage!"
  hrema78.tt: "§RUnsere Verbündeten könnten uns in diesem Krieg verraten.§!"
  HREMT79: "Ankunft des Ilchanats"
- HREMD79: "Nach der Hinrichtung mongolischer Kaufleute durch Muhammad II. von Choresmien wurde ganz Persien in weniger als zwei Jahren von den mongolischen Horden unterworfen, welche die größten Städte des Reiches plünderten und besetzten und es völlig verwüstet hinterließen. Nach der anschließenden Niederschlagung der letzten Aufstände und der Festigung der Herrschaft richten die Mongolen nun ihren Blick weiter nach Westen. Die Chronisten unserer Zeit prophezeien, dass die mongolischen Invasoren die politische Landschaft Mesopotamiens und darüber hinaus erheblich verändern werden."
+ HREMD79: "Nach der skrupellosen Hinrichtung von mongolischen Gesandten und Händlern durch ein Dekret von Ala ad-Din Muhammad II. von Choresmien wurde Persien binnen zwei Jahren von den mongolischen Horden vollends unterworfen. Mit unübertroffener Geschwindigkeit plünderten, verwüsteten und zerstörten die berüchtigt brutalen Reiter viele persische Zentren und hinterließen Persien alsbald in einem trostlosen Ödland.\nNach der Zerschlagung der Saat der Rebellion in Persien und der Festigung ihrer Herrschaft haben die Mongolen ihren Blick weiter nach Westen gerichtet, wobei ihr nächstes Ziel Mesopotamien ist. Eine mögliche mongolische Invasion, so warnen Chronisten und Abergläubige gleichermaßen, könnte die politische Landschaft Mesopotamiens für die nächsten Jahrhunderte neu gestalten."
  HREMA79: "Es ist das Ende aller Tage!"
  HREMT80: "Schicksal der italienischen Griechen"
  HREMD80: "Die alten Griechen gründeten im 8. und 7. Jahrhundert v. Chr. an der gesamten Küste des Mittelmeers und des Schwarzen Meeres Kolonien, um dem raschen Bevölkerungswachstum in ihrer Heimat gerecht zu werden. Viele dieser Kolonien sind vor Jahrhunderten untergegangen, aber Süditalien wird immer noch von einer beträchtlichen Anzahl Griechen bewohnt, die in den byzantinischen Provinzen der Magna Graecia ansässig waren.\n\nMit der Eroberung der letzten byzantinischen Festung in Italien gehört die Halbinsel nun vollständig den Italienern, was die Frage aufwirft, wie wir mit dem griechischen Volk umgehen werden, das jetzt unter unserer Herrschaft lebt. Obwohl die Griechen als die Verfechter der antiken Zivilisation gelten, könnten wir eine Dehellenisierung einleiten und ihre kulturelle Identität in unsere aufnehmen."
@@ -1807,10 +1807,6 @@
  HREMD87: "Der Seldschuke [SJK.Monarch.GetTitle] [SJK.Monarch.GetName] hat gefordert, dass die Region Choresmien ihrem wachsenden Reich überlassen oder mit einer Invasion konfrontiert wird. Im Gegenzug versprechen sie Autonomie und einen fairen Statthalter der lokalen Bevölkerung, der unser Khanat auf ein besser geregeltes Regierungssystem ausrichten wird. So wie Choresmien einst ein Nebenreich des großen sassanidisch-persischen Staates unter seiner eigenen lokalen Dynastie war, so sollten wir wieder auf ihre Forderungen hören und ihre vorgeschlagene neue Führung akzeptieren, oder?"
  HREMA87: "Na schön"
  HREMB87: "Wir beugen uns niemandem"
- HREMT88: "Friedfertige Mongolen"
- HREMD88: "Seit mehreren Wochen führen wir weder Krieg gegen schwache Nationen noch plündern wir eine einzige Stadt. Unsere Krieger und Häuptlinge sind es leid, untätig in ihren Zelten zu verharren, weshalb sie sich fragen, wann sie wieder ihre Pferde besteigen und ihre Waffen erheben dürfen. Sie dürsten nach dem Blut unserer Feinde und fordern die sofortige Ausrufung eines weiteren Krieges gegen einen unserer Nachbarn."
- HREMA88: "In den Krieg!"
- HREMB88: "Wir brauchen noch etwas Ruhe"
  HREMT89: "Freie Reichsstadt von Riga"
  HREMD89: "Seit Generationen besuchen deutsche Händler und Missionare die Mündung der Düna, um ihren Geschäften nachzugehen. In letzter Zeit ist ihre Bevölkerung so stark gewachsen, dass sie an der Stelle des alten Dorfes Riga eine neue befestigte Stadt gegründet haben. Um uns dabei zu helfen, den deutschen katholischen Einfluss in diesem Gebiet voranzutreiben, hat der Papst verkündet, dass die Stadt unverzüglich als Reichsstadt anerkannt wird, die den vollen Schutz der westeuropäischen Mächte genießt."
  HREMA89: "Eine erfreuliche Entwicklung..."
