@@ -400,15 +400,15 @@
  captain_of_the_people_reform: "Captain of the People"
  captain_of_the_people_reform_desc: ""
  authorized_thing_reform: "Authorized Assembly"
- authorized_thing_reform_desc: "A capable and empowered [Root.GetGermanicAssembly] can benefit our nation enormously by not serving in an advisory manner to the monarch, but by being an autonomous institution in its own right."
+ authorized_thing_reform_desc: "A capable and empowered Popular Assembly can benefit our nation enormously by not serving in an advisory manner to the monarch, but by being an autonomous institution in its own right."
  authorized_thing_reform.tt: "§YGovernment Mechanics:§!\nAll Heirs favored by the [This.GetGermanicAssembly] will get §G+1§! Monarch Skill in each category.\n\n"
  representative_thing_reform: "Representative Assembly"
- representative_thing_reform_desc: "The [Root.GetGermanicAssembly] interferes far too often in government affairs, frequently hindering important agendas. Thus, the tasks of the Deligates must be limited to legislative and judicial power in very special cases, so that the monarch can rule with sole sovereignty."
+ representative_thing_reform_desc: "The Popular Assembly interferes far too often in government affairs, frequently hindering important agendas. Thus, the tasks of the Deligates must be limited to legislative and judicial power in very special cases, so that the monarch can rule with sole sovereignty."
  representative_thing_reform.tt: "§YGovernment Mechanics:§!\nAll Heirs favored by the [This.Monarch.GetTitle] will get §G+1§! Monarch Skill in each category.\n\n"
  unity_of_the_brethen_reform: "Unity of the Brethen"
- unity_of_the_brethen_reform_desc: ""
- hussite_radicalism_reform: "Hussite Radicalism"
- hussite_radicalism_reform_desc: ""
+ unity_of_the_brethen_reform_desc: "In the Hussite religion there are various factions such as the Utraquists and Taborites, whose minor disagreements in religious doctrines often cause disputes among them. We should remind them of our similarities and common cause in order to ensure order."
+ hussite_radicalism_reform: "Hussite Militarism"
+ hussite_radicalism_reform_desc: "Thanks to their radical militarism, the Hussite forces were not swept off the earth by the Crusaders during the Hussite Wars. By reviving such a militant and warlike legacy, we will put the fear of God into our enemies and ensure Hussite authority!"
  wisdom_of_the_dervishes_reform: "Wisdom of the Dervishes"
  wisdom_of_the_dervishes_reform_desc: ""
  abb_cluniacs: "The Cluniacs"
