@@ -409,9 +409,9 @@
  representative_thing_reform_desc: "Die Volksversammlung mischt sich viel zu oft in die Regierungsgeschäfte ein und behindert häufig wichtige Agenden. Daher müssen die Aufgaben der Deligierten auf die gesetzgebende und richterliche Gewalt in ganz besonderen Fällen beschränkt werden, damit der Monarch mit alleiniger Souveränität regieren kann."
  representative_thing_reform.tt: "§YRegierungsmechaniken:§!\nAlle Erben, die von [Root.GetMdemder] [Root.Monarch.GetTitle] favorisiert werden, erhalten einen Bonus von §G+1§! in allen Kategorien.\n\n"
  unity_of_the_brethen_reform: "Brüder-Unität"
- unity_of_the_brethen_reform_desc: ""
- hussite_radicalism_reform: "Hussitischer Radikalismus"
- hussite_radicalism_reform_desc: ""
+ unity_of_the_brethen_reform_desc: "In der hussitischen Religion existieren verschiedene Fraktionen wie die Utraquisten und Taboriten, deren geringfügige Unstimmigkeiten in den religiösen Doktrinen oft Auseinandersetzungen unter ihnen hervorrufen. Wir sollten sie an unsere Zusammengehörigkeit und gemeinsame Sache erinnern, um für Ordnung zu sorgen."
+ hussite_radicalism_reform: "Hussitischer Militarismus"
+ hussite_radicalism_reform_desc: "Dank ihres radikalen Militarismus wurden die hussitischen Streitkräfte während der Hussitenkriege nicht von den Kreuzrittern vom Erdboden gefegt. Indem wir ein solch militantes und kriegerisches Erbe wiederbeleben, werden wir unsere Feinden zur Gottesfurcht zwingen und die hussitische Autorität gewährleisten!"
  wisdom_of_the_dervishes_reform: "Weisheit der Derwische"
  wisdom_of_the_dervishes_reform_desc: ""
  abb_cluniacs: "Cluniazenser"
