@@ -14,11 +14,14 @@
 -Fixed rare bug where former Polish subjects would get their rulers and heirs replaced when the Fragmentation of Poland happens
 -Fixed longstanding bug where England could not call their subject Normandy into any wars after the Norman conquest
 -Buffed the Golden Horde and the Ilkhanate upon spawning through their respective events
+-Disallowed human players to tagswitch to the Mongols upon spawning
 -Many <3 development provinces in Europe now have their development boosted to 3 in the timeline once they are civilised
 -Norway replaces Sweden as a suggested country in the 1054 bookmark (it fit better due to its potential role in the English conquest event chain)
+-The Understaffed Electoral College event will become inactive when the Religious Leagues form
 -Small rework to part of Aragon's mission tree structure
 -Province warscore cost replaces claim duration in Aragon's age ability
 -Sicily age ability nerfed
+-Fixed some localisation and gfx in government reforms
 -Changed the province requirements in the decision to create Brandenburg as a non-Markish country
 -Slightly rebalanced the Frankish Monarchy interaction effects
 -Forming another nation should now always switch your country name to theirs (this was a problem with dynamic names such as Altsachsen)
